# euler-pp

./: .clangd  .envrc  .gitignore  Doxyfile  Makefile  flake.nix  meson.build
doc/: Doxyfile.in  meson.build
include/: euler.hpp  fibonacci.hpp  numbers.hpp  prime.hpp  problem1.hpp  problem10.hpp  problem2.hpp  problem3.hpp  problem4.hpp  problem5.hpp  problem6.hpp  problem7.hpp  problem8.hpp  problem9.hpp
src/: euler.cpp  main.cpp  meson.build  number.cpp  problem1.cpp  problem10.cpp  problem2.cpp  problem3.cpp  problem4.cpp  problem5.cpp  problem6.cpp  problem7.cpp  problem8.cpp  problem9.cpp
tests/: meson.build  test_flip_one.cpp  test_numbers.cpp  test_problems.cpp
